--- a/module2-solution/css/mystyle.css
+++ b/module2-solution/css/mystyle.css
@@ -1,52 +1,107 @@
 
+
 	
 *  {box-sizing:border-box ;}
 div>#cont { background-color: green;  }
 
-h1 {text-align: center;}
+h1 {text-align: center;
+    font-family:  Arial, Helvetica, sans-serif ;}
    
-.cont1  { 	   
-  	    border: 1px solid black;
+
+
+.cont1 {border: 1px solid black;
   	    background-color: cornflowerblue;
-  	    margin: 15px;
+  	    margin: 10px;
         width: 30% ;
-        padding: 25px;
+        padding: 40px;
+
         float: left;
-	    height: 150px;
 	    position: relative;}
+
+
+.cont2 {border: 1px solid black;
+  	    background-color: cornflowerblue;
+  	    margin: 10px;
+        width: 30% ;
+        padding: 40px;
+        float: left;
+         position: relative;}
+      
+
+.cont3 {border: 1px solid black;
+  	    background-color: cornflowerblue;
+  	    margin: 10px;
+        width: 30% ;
+        padding: 40px;
+        float: left;
+	      position: relative;}
+
+
 
 
 .div1 {position:absolute;
 	   border: 1px solid black;
-	   padding: 5px; 
-	  text-align: center;
-       top: 0px;
-       right: 0px;
-       background-color: green;}
+	   padding-right:40px; 
+	   padding-left:40px ;
+	   padding-top: 10px ;
+	   padding-bottom: 10px ;
+	   text-align: center;
+	   top: 0px;
+      right: 0px;
+      background-color: #ff66ff;}
 
-.p1      { margin-top: 15px; }
+
+ .div2 {position:absolute;
+     border: 1px solid black;
+     padding-right:40px; 
+     padding-left:40px ;
+     padding-top: 10px ;
+     padding-bottom: 10px ;
+     text-align: center;
+     top: 0px;
+      right: 0px;
+      background-color: #00ff00;}
 
 
-.p2 {
-	     border: 1px solid black;
-  	    background-color: cornflowerblue;
-  	    margin: 15px;
-        width: 30% ;
-        padding: 20px;
-        float: left;
-	    height: 150px;}
-
-.p3{    border: 1px solid black;
-  	    background-color: cornflowerblue;
-  	    margin: 15px;
-        width: 30% ;
-        padding: 10px;
-        float: left;
-	    height: 150px;}
-
+.div3{position:absolute;
+     border: 1px solid black;
+     padding-right:40px; 
+     padding-left:40px ;
+     padding-top: 10px ;
+     padding-bottom: 10px ;
+     text-align: center;
+     top: 0px;
+      right: 0px;
+      background-color: #ff0066;}
 	     
-#cont { background-color: green;  }
+ @media (min-width: 992px) and (max-width: 1280px)  { 
+  
 
+  .cont1{
+  	width: 30%
+  }
+  .cont2{
+  	width: 30%
+  }
+  .cont3{width: 30%}
+   
+}
+
+@media (min-width: 768px) and (max-width: 991px) { 
+   
+   .cont1{ width: 45% ; color: red}
+   .cont2{ width: 45% ; color: red}
+   .cont3 { width: 92%; color: gray }
+    
+ }
+
+ @media (max-width: 767px) { 
+   
+   .cont1{ width: 90%}
+   .cont2{ width: 90%}
+   .cont3 { width: 90%}
+    
+ }
 
 
 
