--- a/module2-solution/css/mystyle.css
+++ b/module2-solution/css/mystyle.css
@@ -74,7 +74,7 @@ h1 {text-align: center;
       right: 0px;
       background-color: #ff0066;}
 	     
-.container {margin-left:10px:}
+.container {margin-left:10px;}
 
 
 
