--- a/module3-solution/css/mystyle.css
+++ b/module3-solution/css/mystyle.css
@@ -35,3 +35,26 @@ li {list-style: none;
 
 
 
+
+.p1{border: 1px solid black;
+  	    background-color: #ff6666;
+  	    margin: 10px;
+        position: relative;
+       padding: 20px;}
+
+        
+	    
+
+.div {
+     text-align: center; }
+
+
+
+
+
+
+
+
+
+
+
